Adding preliminary version of terrel chapter.

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -2353,6 +2353,13 @@ year = 2005
   timestamp = {2009.05.06}
 }
 
+@BOOK{DoneaHuerta2003,
+  author = {Jean Donea and Antonio Huerta},
+  title = {Finite Element Methods for Flow Problems},
+  publisher = {Wilet},
+  year = {2003},
+}
+
 @ARTICLE{DominguezSayas2008,
   author = {V\'{i}ctor Dom\'{i}nguez and Francisco-Javier Sayas},
   title = {Algorithm 884: A Simple {Matlab} Implementation of the {Argyris}
@@ -2519,6 +2526,13 @@ year = 2005
   owner = {logg},
   timestamp = {2009.06.07},
   url = {doi:10.1016/j.crme.2007.08.003}
+}
+
+@BOOK{ElmanEtAl2005,
+  author = {Howard Elman and David Silvester and Andy Wathen},
+  title = {Finite Elements and Fast Iterative Solvers},
+  publisher = {Oxford Science Publications},
+  year = {2005}
 }
 
 @INPROCEEDINGS{Einarsson2005,
@@ -7298,6 +7312,29 @@ year =      {2009},
   timestamp = {2009.06.07}
 }
 
+@INPROCEEDINGS{ScottVogelius1985,
+  title = { Conforming finite element methods for incompressible
+            and nearly incompressible continua},
+  author = { L. Ridgway Scott and Micheal Vogelius},
+  booktitle = { Large Scale Computations in Fluid Mechanics,
+                B. E. Engquist, {\it et al.}, eds.},
+  journal = { Lectures in Applied Math.},
+  volume = {22 (Part 2)},
+  year = 1985,
+  publisher = { Providence: AMS},
+  pages = {221--244}
+}
+
+@ARTICLE{ScottVogelius1985a,
+  title = { Norm estimates for a maximal right inverse of the divergence
+            operator in spaces of piecewise polynomials},
+  author = { L. Ridgway Scott and Micheal Vogelius},
+  journal = { $M^2AN$ (formerly R.A.I.R.O. Analyse Num\'erique) },
+  volume = {19},
+  year = 1985,
+  pages = { 111--143}
+}
+
 @ARTICLE{Shalf2007,
   author = {J.~ Shalf},
   title = {The new landscape of parallel computer architecture},
@@ -7788,6 +7825,19 @@ year =      {2009},
   timestamp = {2007.06.18},
   url = {http://dx.doi.org/10.1529/biophysj.106.089425}
 }
+
+ @ARTICLE{TerrelScott2008,
+     author = {Andy R. Terrel and L. Ridgway Scott and Matthew G. Knepley and Robert C. Kirby},
+     title = {Automated {FEM} Discretizations for the {S}tokes Equation},
+     journal = {BIT Numerical Mathematics},
+     volume = {48},
+     number = {2},
+     pages = {389--404},
+     month = {June},
+     year = {2008},
+     doi = {10.1007/s10543-008-0178-8},
+     url = {http://dx.doi.org/10.1007/s10543-008-0178-8}
+ }
 
 @ARTICLE{TezduyarPark1986,
   author = {Tezduyar, TE and Park, YJ},
