Bug fix in [hoffman-3]

--- a/book.tex
+++ b/book.tex
@@ -63,11 +63,11 @@
 %\includechapter{mardal-3}
 \includechapter{mardal-4}
 \includechapter{schroll}
-%\includechapter{hoffman-3}
+\includechapter{hoffman-3}
 \includechapter{rognes}
 
 % Authors
-% Include list of authors and affiliation here (so we don't need to write out 
+% Include list of authors and affiliation here (so we don't need to write out
 % affiliation, funding etc with each paper)
 
 % References
