Add chapter [kirby-4]

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -3,6 +3,15 @@
 
 @STRING{ijnmf = {Int. {J}. {N}umer. {M}ethods {F}luids}}
 
+@article{WolfHeath2009,
+author={Michael M. Wolf and Michael T. Heath},
+title={Combinatorial optimization of matrix-vector multiplicaion in finite element assembly},
+journal={SIAM J. Sci. Comput.},
+year={2009},
+volume={31},
+pages={2960}
+}
+
 @ARTICLE{OlgaardLoggEtAl2008,
   author = {K. B. \O{}lgaard and A. Logg and G. N. Wells},
   title = {Automated code generation for discontinuous Galerkin methods},
@@ -134,36 +143,36 @@
   number = {1},
   abstract = {This paper deals with the problem of obtaining numerical estimates
 	of
-	
+
 	the accuracy of approximations to solutions of elliptic partial differential
 	equa-
-	
+
 	tions. It is shown that, by solving appropriate local residual type
 	problems, one can
-	
+
 	obtain upper bounds on the error in the energy norm. Moreover, in
 	the special case
-	
+
 	of adaptive h-p finite element analysis, the estimator will also give
 	a realistic
-	
+
 	estimate of the error. A key feature of this is the development of
 	a systematic
-	
+
 	approach to the determination of boundary conditions for the local
 	problems. The
-	
+
 	work extends and combines several existing methods to the case of
 	full h-p finite
-	
+
 	element approximation on possibly irregular meshes with elements of
 	non-uniform
-	
+
 	degree. As a special case, the analysis proves a conjecture made by
 	Bank and
-	
+
 	Weiser [Some A Posteriori Error Estimators for Elliptic Partial Differential
-	
+
 	Equations, Math. Comput. 44, 283-301 (1985)].},
   file = {:AinsworthOden1993.pdf:PDF},
   owner = {massing},
@@ -685,25 +694,25 @@
   pages = {736--754},
   abstract = {A mathematical theory is developed for a class of a-posteriori error
 	estimates of finite
-	
+
 	element solutions. It is based on a general formulation of the finite
 	element method in terms of certain
-	
+
 	bilinear forms on suitable Hilbert spaces. The main theorem gives
 	an error estimate in terms of localized
-	
+
 	quantities which can be computed approximately. The estimate is optimal
 	in the sense that, up to
-	
+
 	multiplicative constants which are independent of the mesh and solution,
 	the upper and lower error bounds
-	
+
 	are the same. The theoretical results also lead to a heuristic characterization
 	of optimal meshes, which in
-	
+
 	turn suggests a strategy for adaptive mesh refinement. Some numerical
 	examples show the approach to be
-	
+
 	very effective.},
   file = {BabuskaRheinboldt1978.pdf:BabuskaRheinboldt1978.pdf:PDF},
   owner = {massing},
@@ -738,16 +747,16 @@
   number = {6},
   abstract = {In BabuSka et al. (Cornput. Meth. appl. Mech. Engng, 114,307-37X (1994);
 	IN. J. numer. Meth.
-	
+
 	Engng 37, 1073-l 123 (1994)) we presented a model study of (1 posteriori
 	error estimators in the interior
-	
+
 	of finite element meshes using a computer-based methodology. In this
 	paper we investigate further the
-	
+
 	quality of element-residual error estimators. We analyzed several
 	versions of the element-residual
-	
+
 	estimator and based on this study we propose recipes for robust estimators.},
   file = {:BabuskaEtAl1994.pdf:PDF},
   owner = {massing},
@@ -845,25 +854,25 @@
   pages = {283--301},
   abstract = {We present three new a posteriori error estimators in the energy norm
 	for finite
-	
+
 	element solutions to elliptic partial differential equations. The
 	estimators are based on solving
-	
+
 	local Neumann problems in each element. The estimators differ in how
 	they enforce
-	
+
 	consistency of the Neumann problems. We prove that as the mesh size
 	decreases, under
-	
+
 	suitable assumptions, two of the error estimators approach upper bounds
 	on the norm of the
-	
+
 	true error, and all three error estimators are within multiplicative
 	constants of the norm of the
-	
+
 	true error. We present numerical results in which one of the error
 	estimators appears to
-	
+
 	converge to the norm of the true error.},
   file = {BankWeiser1985.pdf:BankWeiser1985.pdf:PDF},
   owner = {massing},
@@ -940,11 +949,11 @@
   title = {{A Nitsche extended finite element method for incompressible elasticity
 	with discontinuous modulus of elasticity}},
   institution = {Department of Mathematical Sciences
-	
+
 	Division of Mathematics
-	
+
 	CHALMERS UNIVERSITY OF TECHNOLOGY
-	
+
 	UNIVERSITY OF GOTHENBURG},
   year = {2008},
   file = {:BeckerBurmanHansbo2008.pdf:PDF},
@@ -963,13 +972,13 @@
   number = {5-6},
   abstract = {In this paper we present a residual-based a posteriori error estimate
 	of a natural mesh dependent energy norm of the
-	
+
 	error in a family of discontinuous Galerkin approximations of elliptic
 	problems. The theory is developed for an elliptic
-	
+
 	model problem in two and three spatial dimensions and general nonconvex
 	polygonal domains are allowed. We also
-	
+
 	present some illustrating numerical examples.},
   file = {:BecHanLar2002.pdf:PDF},
   owner = {massing},
@@ -988,16 +997,16 @@
   number = {2},
   abstract = {In this note, we propose and analyse a method for handling interfaces
 	between non-
-	
+
 	matching grids based on an approach suggested by Nitsche (1971) for
 	the approximation of Dirichlet
-	
+
 	boundary conditions. The exposition is limited to self-adjoint elliptic
 	problems, using Poisson?s equa-
-	
+
 	tion as a model. A priori and a posteriori error estimates are given.
 	Some numerical results are
-	
+
 	included.},
   file = {:BecHanSten2003.pdf:PDF},
   owner = {massing},
@@ -1209,7 +1218,7 @@
   abstract = {This paper expands the specification of a set of kernel routines for
 	linear algebra, historically called the Basic Linear Algebra Subprograms
 	and commonly known as the BLAS.\par
-	
+
 	Numerical linear algebra, particularly the solution of linear systems
 	of equations, linear least squares problems, eigenvalue problems
 	and singular value problems, is fundamental to most calculations
@@ -1220,7 +1229,7 @@
 	product, as separate subprograms. This may be observed both in many
 	published codes and in codes written for specific applications at
 	many computer installations.\par
-	
+
 	A major aim of the standards defined in this paper is to enable linear
 	algebra libraries (both public domain and commercial) to interoperate
 	efficiently, reliably and easily.},
@@ -1314,16 +1323,16 @@
   pages = {2431--2444},
   abstract = {When error estimators for the Raviart-Thomas element are developed,
 	two difficulties prevent the
-	
+
 	success of the straightforward application of frequently used arguments.
 	The H(div, )-norm is an anisotropic norm;
-	
+
 	i.e., it refers to differential operators of different orders. Moreover,
 	the traces of H(div, f2)-functions are only in
-	
+
 	H-1/2. Therefore, one does not obtain optimal a posteriori error estimates
 	when using natural norms. This drawback
-	
+
 	is overcome by using mesh-dependent norms.},
   file = {BraessVerfurth1996.pdf:BraessVerfurth1996.pdf:PDF},
   owner = {massing},
@@ -1660,38 +1669,38 @@
   number = {5-8},
   abstract = {In this work, we propose a stabilized explicit coupling scheme for
 	fluid?structure interaction problems
-	
+
 	involving a viscous incompressible fluid. The coupled discrete formulation
 	is based on Nitsche?s method
-	
+
 	with a time penalty term giving L2 -control on the fluid pressure
 	variations at the interface. For a linear
-	
+
 	model problem, we prove that the scheme is stable, in the energy norm,
 	irrespectively of the so-called
-	
+
 	added-mass effect, namely, the fluid?structure density ratio and the
 	geometry of the domain. Numerical
-	
+
 	experiments, in the linear and non-linear case, show that optimal
 	time accuracy can be obtained by per-
-	
+
 	forming one defect-correction iteration.},
   file = {:BurmanFernandez2009.pdf:PDF},
   keywords = {Fluid?structure interaction
-	
+
 	Nitsche?s method
-	
+
 	Fluid incompressibility
-	
+
 	Added-mass effect
-	
+
 	Time discretization
-	
+
 	Explicit coupling
-	
+
 	Loosely coupled schemes
-	
+
 	Defect-correction method},
   owner = {massing},
   publisher = {Elsevier},
@@ -1709,10 +1718,10 @@
   number = {8},
   abstract = {In this Note we propose a stabilized explicit coupling scheme for
 	fluid?structure interaction based on Nitsche?s method. The
-	
+
 	scheme is stable irrespective of the fluid?solid density ratio. Numerical
 	experiments show that optimal time accuracy can be
-	
+
 	obtained by performing a few defect-correction iterations.},
   file = {:BurmanFernandez2007.pdf:PDF},
   owner = {massing},
@@ -1821,22 +1830,22 @@
   number = {2},
   abstract = {Error indicators based on solution gradients, interpolation errors,
 	and a posteriori error estimates are presented for
-	
+
 	use in defining monitor functions for the r-adaptive finite element
 	methods based on moving mesh partial differential
-	
+
 	equations. The methods are compared with a careful selection of examples.
 	The numerical results show that the
-	
+
 	methods based on both interpolation errors and a posteriori error
 	estimates work well and have better performance
-	
+
 	than that based on the solution gradient. Since, the interpolation
 	error is in general easier and more economic to
-	
+
 	compute than a posteriori error estimates, this study suggests that
 	the error indicator based on interpolation errors
-	
+
 	be used for the r-adaptive method.},
   file = {:CaoHuangRussel2001.pdf:PDF},
   owner = {massing},
@@ -1853,45 +1862,45 @@
   pages = {1465},
   abstract = {If the first task in numerical analysis is the calculation of an approximate
 	solution,
-	
+
 	the second is to provide a guaranteed error bound and is often of
 	equal importance. The standard
-	
+
 	approaches in the a posteriori error analysis of finite element methods
 	suppose that the exact solution
-	
+
 	has a certain regularity or the numerical scheme enjoys some saturation
 	property. For coarse meshes
-	
+
 	those asymptotic arguments are difficult to recast into rigorous error
 	bounds. The aim of this paper
-	
+
 	is to provide reliable computable error bounds which are efficient
 	and complete in the sense that
-	
+
 	constants are estimated as well. The main argument is a localization
 	via a partition of unity which
-	
+
 	leads to problems on small domains. Two fully reliable estimates are
 	established: The sharper
-	
+
 	one solves an analytical interface problem with residuals following
 	Babuˇka and Rheinboldt [SIAM
-	
+
 	s
-	
+
 	J. Numer. Anal., 15 (1978), pp. 736–754]. The second estimate is a
 	modification of the standard
-	
+
 	residual-based a posteriori estimate with explicit constants from
 	local analytical eigenvalue problems.
-	
+
 	For some class of triangulations we show that the efficiency constant
 	is smaller than 2.5. According
-	
+
 	to our numerical experience, the overestimation of our computable
 	estimates proved to be reasonably
-	
+
 	small, with an overestimation by a factor between 2.5 and 4 only.},
   file = {:CarstensenFunken2000.pdf:PDF},
   owner = {massing},
@@ -2410,46 +2419,46 @@
   year = {2007},
   abstract = {Aim of this work is the examination of numerical methods for fluid-structure
 	interaction
-	
+
 	(FSI) problems. We use two approaches for the modelling of FSI problems.
 	The well-known
-	
+
 	?arbitrary Lagrangian-Eulerian? (ALE) approach as well as an unusual
 	fully Eulerian approach. For both frameworks we derive a general
 	variational
-	
+
 	framework for the adaptive finite element approximation of FSI problems.
-	
+
 	The focal points of this thesis are the comparison of the ALE and
 	the novel Eulerian approaches
-	
+
 	and the application of the ?dual weighted residual? (DWR) method to
 	FSI problems.
-	
+
 	The DWR method is the basis of two techniques, a posteriori error
 	estimation and
-	
+
 	goal-oriented mesh adaptivity.
-	
+
 	Based on the developed models of FSI we apply the DWR method for a
 	posteriori error
-	
+
 	estimation and goal-oriented mesh adaptation to FSI problems. Necessary
 	aspects of DWR
-	
+
 	method and implementation for the ALE and Eulerian approach are discussed.Several
 	stationary as well as nonstationary examples are presented using
 	both the ALE as
-	
+
 	well as the Eulerian framework. Results from both frameworks are in
 	good agreement with
-	
+
 	each other. Also for both frameworks the DWR method is successfully
 	applied.
-	
+
 	Finally using benchmark results from the DFG joint research group
 	FOR 493 (of which the
-	
+
 	author is a participating member) the discussed methods are verified
 	for both frameworks.},
   file = {:Dunne2007.pdf:PDF},
@@ -2799,16 +2808,16 @@
   pages = {369--375},
   abstract = {Unsteady analytical solutions to the incompressible Navier-Stokes
 	equations are presented. They are fully
-	
+
 	three-dimensional vector solutions involving all three Cartesian velocity
 	components, each of which depends
-	
+
 	non-trivially on all three co-ordinate directions. Although unlikely
 	to be physically realized, they are well
-	
+
 	suited for benchmarking, testing and validation of three-dimensional
 	incompressible Navier-Stokes solvers.
-	
+
 	The use of such a solution for benchmarking purposes is described},
   file = {:RosSte1994.pdf:PDF}
 }
@@ -3357,16 +3366,16 @@
   number = {47-48},
   abstract = {In this paper we propose a method for the finite element solution
 	of elliptic interface problem, using an approach due
-	
+
 	to Nitsche. The method allows for discontinuities, internal to the
 	elements, in the approximation across the interface.
-	
+
 	We show that optimal order of convergence holds without restrictions
 	on the location of the interface relative to the
-	
+
 	mesh. Further, we derive a posteriori error estimates for the purpose
 	of controlling functionals of the error and present
-	
+
 	some numerical examples.},
   file = {:HanHan2002.pdf:PDF},
   owner = {massing},
@@ -3385,16 +3394,16 @@
   __markedentry = {[logg]},
   abstract = {In this paper we propose a finite element method for the approximation
 	of second order
-	
+
 	elliptic problems on composite grids. The method is based on continuous
 	piecewise polynomial approx-
-	
+
 	imation on each grid and weak enforcement of the proper continuity
 	at an artificial interface defined by
-	
+
 	edges (or faces) of one the grids. We prove optimal order a priori
 	and energy type a posteriori error
-	
+
 	estimates in 2 and 3 space dimensions, and present some numerical
 	examples.},
   file = {:HanHan2003.pdf:PDF},
@@ -3412,16 +3421,16 @@
   number = {3},
   abstract = {In this paper we propose a finite element method for the approximation
 	of second order
-	
+
 	elliptic problems on composite grids. The method is based on continuous
 	piecewise polynomial approx-
-	
+
 	imation on each grid and weak enforcement of the proper continuity
 	at an artificial interface defined by
-	
+
 	edges (or faces) of one the grids. We prove optimal order a priori
 	and energy type a posteriori error
-	
+
 	estimates in 2 and 3 space dimensions, and present some numerical
 	examples.},
   file = {:HanHanLar2003.pdf:PDF},
@@ -3438,10 +3447,10 @@
   number = {2},
   abstract = {We give a review of Nitsche?s method applied to interface problems,
 	involving
-	
+
 	real or artificial interfaces. Applications to unfitted meshes, Chimera
 	meshes, cut
-	
+
 	meshes, fictitious domain methods, and model coupling are discussed.},
   file = {:Hansbo2005.pdf:PDF},
   owner = {massing},
@@ -3471,30 +3480,30 @@
   number = {1-2},
   abstract = {Nitsche?s method [11] is a classical method for imposing essential
 	boundary
-	
+
 	conditions weakly. Unlike the penalty method, it is consistent with
 	the
-	
+
 	original dif- ferential equation. The strong point of Nitsche?s method
 	is that
-	
+
 	it retains the convergence rate of the underlying finite element method,
-	
+
 	whereas the standard penalty method either requires a ??very large??
 	penalty
-	
+
 	parameter, destroy- ing the condition number of the resulting matrix
 	problem,
-	
+
 	or, in case the condition number is to be retained, is limited to
 	first order
-	
+
 	energy-norm accuracy. In this paper, we give a formulation of Nitsche?s
 	method
-	
+
 	suitable for the problem of fluid-structure interaction. Numerical
 	examples are
-	
+
 	given.},
   file = {:HansboHermansson2003.pdf:PDF},
   owner = {massing},
@@ -4236,20 +4245,20 @@
   number = {5-7},
   abstract = {This paper presents a numerical study of a posteriori error estimators
 	for convection-diffusion equations. The study involves the
-	
+
 	gradient indicator, an a posteriori error estimator which is based
 	on gradient recovery, three residual-based error estimators for
-	
+
 	different norms, and two error estimators which are defined by solutions
 	of local Neumann problems. They are compared with respect
-	
+
 	to the reliable estimation of the global error and with respect to
 	the accuracy of the computed solutions on adaptively refined grids.
 	The
-	
+
 	numerical study shows for both criteria of comparison that none of
 	the considered error estimators works satisfactorily in all
-	
+
 	tests.},
   file = {:Volker2000.pdf:PDF},
   owner = {massing},
@@ -4941,13 +4950,13 @@
   pages = {485--509},
   abstract = {Statically and kinematically admissible fields are explicitly derived
 	from the finite element
-	
+
 	solution of the primal form of linear models. The error on constitutive
 	law for these fields yields an
-	
+
 	expression of the finite element error. Moreover, the contribution
 	of each element to this error allows to
-	
+
 	implement an automatic mesh refinement procedure leading to a uniform
 	distribution of a given accuracy.},
   file = {LadevezeLeguillon1983.pdf:LadevezeLeguillon1983.pdf:PDF},
@@ -5229,22 +5238,22 @@
   number = {6},
   abstract = {We consider computation of the displacement of an elastic object immersed
 	into a
-	
+
 	viscous incompressible flow. For simplicity, we assume that the mechanics
 	of the solid
-	
+
 	is governed by linear elasticity and the motion of the fluid by the
 	Stokes equation.
-	
+
 	We derive an a posteriori error estimate for this one way coupled
 	problem using
-	
+
 	duality techniques. Based on these estimates we develop an adaptive
 	algorithm that
-	
+
 	automatically constructs a suitable adapted mesh for the fluid and
 	solid domains
-	
+
 	given goal quantities specified on the solid problem},
   file = {:BengtzonLarson2009.pdf:PDF},
   owner = {massing},
@@ -5262,29 +5271,29 @@
   pages = {113--130},
   number = {1},
   abstract = {In this paper we analyze a family of discontinuous Galerkin
-	
+
 	methods, parameterized by two real parameters, for elliptic problems
 	in one
-	
+
 	dimension. Our main results are: (1) a complete inf-sup stability
 	analysis char-
-	
+
 	acterizing the parameter values yielding a stable scheme and energy
 	norm
-	
+
 	error estimates as a direct consequence thereof, (2) an analysis of
 	the error
-	
+
 	in L2 where the standard duality argument only works for special parameter
-	
+
 	values yielding a symmetric bilinear form and different orders of
 	conver-
-	
+
 	gence are obtained for odd and even order polynomials in the nonsymmetric
-	
+
 	case. The analysis is consistent with numerical results and similar
 	behavior
-	
+
 	is observed in two dimensions.},
   file = {:BengtzonLarson2009.pdf:PDF},
   owner = {massing},
@@ -5302,25 +5311,25 @@
   number = {8},
   abstract = {We investigate the characteristics and performance of goal-oriented
 	a posteriori error measures for a
-	
+
 	class of non-linear elasticity models, while restriction is made to
 	small strain theory. The chosen error
-	
+
 	measure of the displacement ÿeld can be global or local (probing the
 	chosen quantity in a speciÿc
-	
+
 	spatial point). The error is computable with the aid of the solution
 	of a dual problem whose data
-	
+
 	depend on the error measure. The main thrust of the paper is to evaluate
 	the performance of a few
-	
+
 	di erent approximation strategies for computing the dual solution.
 	The chosen strategies are compared
-	
+
 	in terms of accuracy, ease of implementation, reliability and cost-e
 	ciency. A well-known numerical
-	
+
 	example, the Cook’s membrane, is used for the numerical evaluations.},
   file = {:LarssonHansboRunesson2002.pdf:PDF},
   owner = {massing},
@@ -5528,33 +5537,33 @@
   number = {2},
   abstract = {The finite element method can be viewed as a machine that automates
 	the discretization of differential
-	
+
 	equations, taking as input a variational problem, a finite element
 	and a mesh, and producing as output
-	
+
 	a system of discrete equations. However, the generality of the framework
 	provided by the finite element
-	
+
 	method is seldom reflected in implementations (realizations), which
 	are often specialized and can handle
-	
+
 	only a small set of variational problems and finite elements (but
 	are typically parametrized over the choice
-	
+
 	of mesh).
-	
+
 	This paper reviews ongoing research in the direction of a complete
 	automation of the finite element method.
-	
+
 	In particular, this work discusses algorithms for the efficient and
 	automatic computation of a system of
-	
+
 	discrete equations from a given variational problem, finite element
 	and mesh. It is demonstrated that by
-	
+
 	automatically generating and compiling efficient low-level code, it
 	is possible to parametrize a finite element
-	
+
 	code over variational problem and finite element in addition to the
 	mesh.},
   file = {:Log2007.pdf:PDF},
@@ -6031,16 +6040,16 @@
   pages = {757--778},
   number = {4},
   abstract = {Three a posteriori error estimators for P EERS and BDMS ele-
-	
+
 	ments in linear elasticity are presented: one residual error estimator
 	and two
-	
+
 	estimators based on the solution of auxiliary local problems with
 	different
-	
+
 	boundary conditions. All of them are reliable and efficient with respect
 	to the
-	
+
 	standard norm and furthermore robust for nearly incompressible materials.},
   file = {:LonsingVerfurth2004.pdf:PDF},
   owner = {massing},
@@ -6070,16 +6079,16 @@
   pages = {1659},
   number = {256},
   abstract = {This paper deals with the a posteriori error analysis of mixed
-	
+
 	finite element methods for second order elliptic equations. It is
 	shown that a
-	
+
 	reliable and efficient error estimator can be constructed using a
 	postprocessed
-	
+
 	solution of the method. The analysis is performed in two different
 	ways: under
-	
+
 	a saturation assumption and using a Helmholtz decomposition for vector
 	fields.},
   file = {:LovadinaStenberg2006.pdf:PDF},
@@ -6433,19 +6442,19 @@
   number = {4},
   abstract = {We describe two adaptive space-time hp-refinement algorithms for solving
 	one-dimensional vector systems of
-	
+
 	parabolic partial differential equations. Solutions for both methods
 	are calculated using GalerLin's method with a
-	
+
 	piecewise polynomial hierarchical basis in space. The first method,
 	hpsirk, uses singly-implicit Runge-Kutta methods
-	
+
 	in time and integrates the spatial and temporal discretization strategies.
 	The second, hpdassl, is a method-of-lines
-	
+
 	approach using a BDF code. The two methods are compared along with
 	the algorithm epdcol as a benchmark on
-	
+
 	four nonlinear test problems.},
   file = {Moore1995.pdf:Moore1995.pdf:PDF},
   owner = {massing},
@@ -6514,16 +6523,16 @@
   number = {12},
   abstract = {In this work, we consider the behaviour of the residual error using
 	a smooth finite element solution for elliptic problems on
-	
+
 	nonconvex and nonsmooth domains. It is proved that, against expectations,
 	the residual error is unbounded and actually diverges
-	
+
 	to infinity as the mesh size goes to zero. A numerical example which
 	illustrates this phenomenon will be presented for the Poisson
-	
+
 	equation on an L-shaped domain using a C 1 Hermite element, and similar
 	results will be shown for a C 0 element with a posteriori
-	
+
 	smoothing},
   file = {:NakaoKinoshita2007.pdf:PDF},
   owner = {massing},
@@ -6559,22 +6568,22 @@
   number = {5},
   abstract = {This paper describes the new "diffuse approximation" method, which
 	may be presented as a generalization of the
-	
+
 	widely used "finite element approximation" method. It removes some
 	of the limitations of the finite element approximation
-	
+
 	related to the regularity of approximated functions, and to mesh generation
 	requirements. The diffuse approximation method
-	
+
 	may be used for generating smooth approximations of functions known
 	at given sets of points and for accurately estimating
-	
+
 	their derivatives. It is useful as well for solving partial differential
 	equations, leading to the so called "diffuse dement method"
-	
+
 	(DEM), which presents several advantages compared to the "finite element
 	method" (FEM), specially for evaluating the
-	
+
 	derivatives of the unknown functions.},
   file = {:NayrolesTouzotVillon1992.pdf:PDF},
   owner = {massing},
@@ -6738,31 +6747,31 @@
   number = {5-6},
   abstract = {In this paper, we study a new approach in a posteriovi error estimation,
 	in which
-	
+
 	the numerical error of finite element approximations is estimated
 	in terms of quantities of interest
-	
+
 	rather than the classical energy norm. These so-called quantities
 	of interest are characterized by
-	
+
 	linear functionals on the space of functions to where the solution
 	belongs. W e present here the theory
-	
+
 	with respect to a class of elliptic boundary-value problems, and in
 	particular, show h o w to obtain
-	
+
 	accurate estimates as well as upper and lower bounds on the error.
 	W e also study the new concept
-	
+
 	of goal-oriented adaptivity, which embodies mesh adaptation procedures
 	designed to control error
-	
+
 	in specific quantities. Numerical experiments confirm that such procedures
 	greatly accelerate the
-	
+
 	attainment of local features of the solution to preset accuracies
 	as compared to traditional adaptive
-	
+
 	schemes based on energy n o r m error estimates.},
   file = {:OdenPrudhomme1999.pdf:PDF},
   owner = {massing},
@@ -7064,19 +7073,19 @@
   number = {2},
   abstract = {In this article we analyze a subdomain residual error estimator for
 	finite element approximations of elliptic
-	
+
 	problems. It is obtained by solving local problems on patches of elements
 	in weighted spaces and provides
-	
+
 	an upper bound on the energy norm of the error when the local problems
 	are solved in sufficiently enriched
-	
+
 	discrete spaces. A guaranteed lower bound on the error is also derived
 	by a simple postprocess of the
-	
+
 	solutions to the local problems. Numerical tests show very good effectivity
 	indices for both the upper and
-	
+
 	lower bounds and a strong reliability of this estimator even for coarse
 	meshes.},
   file = {:PrudhommeNobileChamoinOden2004.pdf:PDF},
@@ -7552,30 +7561,30 @@
   pages = {633},
   number = {262},
   abstract = {Maxwell equations are posed as variational boundary value prob-
-	
+
 	lems in the function space H(curl) and are discretized by Nedelec
 	finite el-
-	
+
 	ements. In Beck et al., 2000, a residual type a posteriori error estimator
-	
+
 	was proposed and analyzed under certain conditions onto the domain.
 	In
-	
+
 	the present paper, we prove the reliability of that error estimator
 	on Lips-
-	
+
 	chitz domains. The key is to establish new error estimates for the
 	commuting
-	
+
 	quasi-interpolation operators recently introduced in J. Schöberl,
 	Commuting
-	
+
 	quasi-interpolation operators for mixed finite elements. Similar estimates
 	are
-	
+
 	required for additive Schwarz preconditioning. To incorporate boundary
 	con-
-	
+
 	ditions, we establish a new extension result.},
   file = {Schoberl2008.pdf:Schoberl2008.pdf:PDF},
   owner = {massing},
@@ -8189,24 +8198,24 @@
   pages = {195--212},
   number = {3},
   abstract = {We consider discretizations of the heat equation by A-stable θ-
-	
+
 	schemes in time and conforming finite elements in space. For these
 	dis-
-	
+
 	cretizations we derive residual a posteriori error indicators. The
 	indicators
-	
+
 	yield upper bounds on the error which are global in space and time
 	and yield
-	
+
 	lower bounds that are global in space and local in time. The ratio
 	between
-	
+
 	upper and lower bounds is uniformly bounded in time and does not depend
-	
+
 	on any step-size in space or time. Moreover, there is no restriction
 	on the
-	
+
 	relation between the step-sizes in space and time.},
   file = {Verfurth2003.pdf:Verfurth2003.pdf:PDF},
   owner = {massing},
@@ -8250,31 +8259,31 @@
   pages = {309--325},
   number = {3},
   abstract = {We present two a posteriori error estimators for the mini-element
-	
+
 	discretization of the Stokes equations. One is based on a suitable
 	evaluation
-	
+
 	of the residual of the finite element solution. The other one is based
 	on
-	
+
 	the solution of suitable local Stokes problems involving the residual
 	of the
-	
+
 	finite element solution. Both estimators are globally upper and locally
 	lower
-	
+
 	bounds for the error of the finite element discretization. Numerical
 	examples
-	
+
 	show their efficiency both in estimating the error and in controlling
 	an auto-
-	
+
 	matic, self-adaptive mesh-refinement process. The methods presented
 	here
-	
+
 	can easily be generalized to the Navier-Stokes equations and to other
 	discreti-
-	
+
 	zation schemes.},
   file = {Verfurth1989.pdf:Verfurth1989.pdf:PDF},
   owner = {massing},
@@ -8452,25 +8461,25 @@
   pages = {1347--1378},
   number = {228},
   abstract = {We consider mixed finite element discretizations of linear second
-	
+
 	order elliptic boundary value problems with respect to an adaptively
 	generated
-	
+
 	hierarchy of possibly highly nonuniform simplicial triangulations.
 	In particu-
-	
+
 	lar, we present and analyze four different kinds of error estimators:
 	a residual
-	
+
 	based estimator, a hierarchical one, error estimators relying on the
 	solution of
-	
+
 	local subproblems and on a superconvergence result, respectively.
 	Finally, we
-	
+
 	examine the relationship between the presented error estimators and
 	compare
-	
+
 	their local components.},
   file = {:WohlmuthHoppe1999.pdf:PDF},
   owner = {massing},
@@ -8536,42 +8545,42 @@
   pages = {5--8},
   abstract = {Numerical simulations of fluid-structure interaction typically require
 	vast com-
-	
+
 	putational resources. Finite-element techniques employing goal-oriented
 	hp-adaptation
-	
+
 	strategies could offer a substantial improvement in the efficiency
 	of such simulations.
-	
+
 	These strategies rely on dual-based a-posteriori error estimates for
 	quantities of interest.
-	
+
 	However, the free-boundary character of fluid-structure-interaction
 	problems forms a fun-
-	
+
 	damental complication, as it yields the underlying domain unknown
 	a-priori. Instead, the
-	
+
 	domain comprises part of the solution. Consequently, the well-established
 	generic frame-
-	
+
 	work for dual-based error estimation is not applicable.
-	
+
 	In this work we develop a framework for dual-based a-posteriori error
 	estimation for
-	
+
 	free-boundary problems such as fluid-structure interaction. The framework
 	is based on the
-	
+
 	embedded-domain approach and an extension operator which enables the
 	comparison of
-	
+
 	approximate solutions on distinct domains. Given an approximate fluid
 	and structure so-
-	
+
 	lution, we present a dual problem on the corresponding approximate
 	fluid domain. Finally,
-	
+
 	we employ the dual solution to present an exact error representation
 	formula.},
   file = {:ZeeBrummelenBorst2006.pdf:PDF},
@@ -8863,6 +8872,14 @@
   timestamp = {2009.06.06}
 }
 
+@UNPUBLISHED{www:ferari,
+  title = {{FE}rari},
+  author = {Robert C. Kirby},
+  note = {\url{http://www.fenics.org/ferari/}},
+  key = {{FE}rari},
+  timestamp = {2010.02.16}
+}
+
 @UNPUBLISHED{www:vtk,
   title = {{VTK} software package},
   note = {\url{http://www.kitware.com}},
@@ -8901,4 +8918,3 @@
 2 ExplicitGroup:Goal oriented error estimators\;0\;;
 2 ExplicitGroup:Residual-based\;0\;;
 }
-
