Remove cancelled chapters

--- a/book.tex
+++ b/book.tex
@@ -26,7 +26,7 @@
 \includechapter{kirby-5}
 \includechapter{logg-3}
 \includechapter{oelgaard-2}
-\includechapter{logg-4}
+\includechapter{kirby-8}
 \includechapter{kirby-4}
 \includechapter{hoffman-4}
 
@@ -41,29 +41,25 @@
 \includechapter{alnes-2}
 \includechapter{alnes-1}
 \includechapter{hoffman-2}
-\includechapter{skavhaug}
 \includechapter{mardal-2}
 
 \part{Applications}
 
 \includechapter{terrel}
 \includechapter{kvs-1}
-\includechapter{antiga}
 \includechapter{kvs-2}
 \includechapter{hentschel}
 \includechapter{hoffman-1}
-\includechapter{selim}
 \includechapter{lopes}
 \includechapter{shan}
-%\includechapter{alnes-4}
 \includechapter{hake}
 \includechapter{lezar}
 \includechapter{oelgaard-1}
+% FIXME: Insert chapter [narayanan] if not merged with [oelgaard-1]
 \includechapter{nikbakht}
-%\includechapter{mardal-3}
-\includechapter{mardal-4}
 \includechapter{schroll}
 \includechapter{hoffman-3}
+\includechapter{mardal-4}
 \includechapter{rognes}
 
 % Authors
