Work with styling to make book look a little less ugly.

--- a/book.tex
+++ b/book.tex
@@ -55,7 +55,7 @@
 \includechapter{hake}
 \includechapter{lezar}
 \includechapter{oelgaard-1}
-% FIXME: Insert chapter [narayanan] if not merged with [oelgaard-1]
+%% FIXME: Insert chapter [narayanan] if not merged with [oelgaard-1]
 \includechapter{nikbakht}
 \includechapter{schroll}
 \includechapter{hoffman-3}
