--- a/frontmatter/titlepage.tex
+++ b/frontmatter/titlepage.tex
@@ -1,20 +1,17 @@
-%FIXME: Figure out exact placement of cover image
-
+% No headings
 \pagestyle{empty}
 
 % Cover image
-\changepage{4.9cm}{4cm}{}{-2cm}{}{}{}{}{}
 \definecolor{fenicsred}{RGB}{215, 30, 40}
 \pagecolor{fenicsred}
 \hfill
 \includegraphics{frontmatter/eps/editors.eps} \\
-\includegraphics[height=8cm]{frontmatter/eps/title.eps}
+\includegraphics[height=7cm]{frontmatter/eps/title.eps}
 \vfill
 \hfill
-\includegraphics[height=12cm]{frontmatter/eps/f.eps}
+\includegraphics[height=8cm]{frontmatter/eps/f.eps}
 \thispagestyle{empty}
 \newpage
-\changepage{-4.9cm}{-4cm}{}{2cm}{}{}{}{}{}
 \pagecolor{white}
 
 % Some useful information
@@ -24,55 +21,9 @@
   Automated Scientific Computing \\
   Logg, Mardal, Wells (editors) \\ \\
   This is a preliminary draft, \today. \\
-  Send comments and suggestions to \texttt{fenics-book-dev@fenics.org}.
+  Send comments to \texttt{fenics-authors@lists.launchpad.net}.
 \end{minipage}
 \newpage
 
-% Title page
-\begin{center}
-
-  \vspace{1cm}
-
-  \LARGE
-
-  Automated Scientific Computing
-
-  \vspace{1cm}
-
-  \emph{The FEniCS Book}
-
-  \vfill
-
-  \Large
-
-  Preliminary draft, \today
-
-\end{center}
-\cleardoublepage
-
-% Nice qute
-\null\vspace{5cm}
-\linespread{1.5}
-\begin{center}
-  \begin{quote}
-    \it
-
-    And now that we may give final praise to the machine we may say that
-    it will be desirable to all who are engaged in computations which, it
-    is well known, are the managers of financial affairs, the
-    administrators of others' estates, merchants, surveyors, geographers,
-    navigators, astronomers\ldots For it is unworthy of excellent men to lose
-    hours like slaves in the labor of calculations which could safely be
-    relegated to anyone else if the machine were used.
-    
-    \rm
-
-    \vspace{0.5cm}
-    
-    Gottfried Wilhelm Leibniz (1646--1716)
-  \end{quote}
-\end{center}
-\linespread{1.0}
-\cleardoublepage
-
+% Turn on fancy headings
 \pagestyle{fancy}
