--- a/frontmatter/preamble.tex
+++ b/frontmatter/preamble.tex
@@ -1,21 +1,16 @@
-\documentclass[12pt]{book}
-
-% Hyperlinks
-\usepackage{hyperref}
+\documentclass[11pt]{book}
 
 % Packages
+\usepackage{hyperref}
 \usepackage{graphicx}
 \usepackage{a4wide}
 \usepackage{fancyhdr}
 \usepackage{fancyvrb}
-
-% Font-related packages
 \usepackage{amsmath}
 \usepackage{amssymb}
 \usepackage{amsfonts}
 \usepackage{amsbsy}
 \usepackage{bm}
-
 \usepackage{psfrag}
 \usepackage{makeidx}
 \usepackage{longtable}
@@ -32,7 +27,7 @@
 \usepackage{subfigure}
 \usepackage{changepage}
 \usepackage{xspace}
-
+\usepackage{pythonhighlight}
 \usepackage{subfigure}
 
 % Bibliography
@@ -40,19 +35,39 @@
 \renewcommand{\cite}[1]{\citep{#1}}
 
 % Set margins
-\usepackage[top=3cm, bottom=3cm, left=3cm, right=3cm]{geometry}
+%\usepackage[top=3cm, bottom=3cm, left=3cm, right=3cm]{geometry}
 
 % Set table of contents depth
 \setcounter{tocdepth}{0}
 
 % Fonts and chapter styles
 \usepackage{sectsty}
-\usepackage[Sonny]{fncychap}
-\usepackage{newcent}
+%\usepackage[Sonny]{fncychap}
+%\usepackage{newcent}
+\usepackage{palatino}
+
+% Chapter title
+\makeatletter
+\renewcommand{\@makechapterhead}[1]{%
+\vspace*{50 pt}%
+{\setlength{\parindent}{0pt} \raggedright \normalfont
+\Huge
+\ifnum \value{secnumdepth}>1
+   \it\if@mainmatter\thechapter.\ \fi%
+\fi
+#1\par\nobreak\vspace{40 pt}}}
+\makeatother
+
+% Section title
+\sectionfont{\rm\it}
+\subsectionfont{\rm\it}
 
 % Headers
-\lhead{}
-\rhead{}
+\lhead{\thepage}
+\rhead{\small AUTOMATED SCIENTIFIC COMPUTING}
+\cfoot{}
+\chead{}
+\renewcommand{\headrulewidth}{0pt}
 
 % Clear empty page when chapter open right
 \let\origdoublepage\cleardoublepage
@@ -62,8 +77,7 @@
 }
 
 % Book macros
-\newcommand{\fenicschapter}[4]{\chapter{#1 \\ \small{\rm By #3}} \vspace{-1cm}
-                              Chapter ref: \textbf{[#4]} \label{chap:#4} \vspace{1cm} \chead[#2]{#3}}
+\newcommand{\fenicschapter}[4]{\chapter{#1} \vspace{-1cm} \Large By #3 \normalsize \vspace{1.5cm}}
 \newcommand{\fenicsappendix}[2]{\chapter{#1} \chead{#2}}
 \newcommand{\fenics}{\textbf{FEniCS}}
 \newcommand{\dolfin}{\textbf{DOLFIN}}
@@ -125,8 +139,6 @@
 \newcommand{\Hcurl}{H(\mathrm{curl})}
 \newcommand{\nedelec}{N\'ed\'elec}
 \newcommand{\babuska}{Babu\v{s}ka}
-
-\usepackage{pythonhighlight}
 
 % Math operators
 \DeclareMathOperator{\PE}{PE}
